--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,18 @@
 body {
   background-color: #1b2631;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
 }
 #container1 {
   margin: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   height: 50vh;
 }
 #container2 {
@@ -21,7 +20,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50vh;
 }
 .title-name {
   color: white;
