--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,14 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  height: 50vh;
+  width: 70vw;
 }
 #container2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 30vw;
 }
 .title-name {
   color: white;
@@ -63,4 +64,8 @@ body {
   #insert-box input {
     width: 200px;
   }
+}
+#dog-img {
+  height: 100%;
+  width: 100%;
 }
