created prediction table

--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,22 @@ body {
   height: 100%;
   width: 100%;
 }
+
+table {
+  width: 500px;
+  height: 100px;
+  color: white;
+  box-shadow: -1px 12px 12px rgba(0, 0, 0, 0.5);
+  background-color: #0c1b2b;
+  text-align: center;
+}
+table,
+td,
+th {
+  padding: 20px;
+  border: 1px solid lightblue;
+}
+.header {
+  background-color: #395169;
+  font-weight: bold;
+}
