--- a/styles.css
+++ b/styles.css
@@ -54,17 +54,7 @@ body {
 #insert-box img {
   width: 22px;
 }
-@media (max-width: 700px) {
-  .title-name {
-    font-size: 16px;
-  }
-  .description {
-    font-size: 15px;
-  }
-  #insert-box input {
-    width: 200px;
-  }
-}
+
 #dog-img {
   height: 100%;
   width: 100%;
@@ -82,10 +72,40 @@ table,
 td,
 th {
   padding: 20px;
-  border: 1px solid lightblue;
+  border: 2px solid lightblue;
   border-collapse: collapse;
 }
 th {
   background-color: #395169;
   font-weight: bold;
+}
+
+@media (max-width: 700px) {
+  body {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  #container1 {
+    align-items: center;
+  }
+  .title-name {
+    font-size: 16px;
+  }
+  .description {
+    font-size: 15px;
+  }
+  #insert-box input {
+    width: 200px;
+  }
+  table {
+    width: 200px;
+    height: 100px;
+    color: white;
+  }
+  table,
+  td,
+  th {
+    padding: 10px;
+  }
 }
