--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
   width: fit-content;
   display: flex;
   align-items: center;
-  padding: 18px 20px;
+  padding: 15px 15px;
   border-radius: 5px;
   margin: 20px 0;
 }
@@ -88,6 +88,9 @@ th {
   }
   #container1 {
     align-items: center;
+  }
+  #container2 {
+    width: 50vw;
   }
   .title-name {
     font-size: 16px;
